@@ -2,6 +2,7 @@
 
 MINOR:
   * spectrogram(), getLoudness(): better temporal alignment of the waveform, spectrogram, and loudness contour
+  * analyze(), analyzeFolder(): more precise time stampts for STFT frames
 
           CHANGES IN SOUNDGEN VERSION 1.3.2 [10-January-2019]
 MINOR:
